Update Makefile. Add ignores. Make buffer in send() larger.

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,8 @@ CXXFLAGS += -fno-exceptions -fno-rtti
 
 CXXFLAGS += -O3 -fstrict-aliasing
 CXXFLAGS += -fomit-frame-pointer
+CXXFLAGS += -std=c++17 -mavx -mavx2 -mfma
+CXXFLAGS += -DDUMP_SEARCH_STATS -DDUMP_MULTIPV_RESULTS
 # CXXFLAGS += -march=athlon-xp # SELECT ME
 
 # strip
