Cache size adjustments. Some optimizations.

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,7 @@ LDFLAGS  = -lm
 CXXFLAGS += -O3 -fstrict-aliasing
 CXXFLAGS += -fomit-frame-pointer -fno-exceptions -fno-rtti
 CXXFLAGS += -std=c++17 -mavx -mavx2 -mfma
-CXXFLAGS += -DDUMP_SEARCH_STATS -DDUMP_MULTIPV_RESULTS
+CXXFLAGS += -DDUMP_SEARCH_STATS -DDUMP_MULTIPV_RESULTS -DRECORD_CACHE_STATS
 CXXFLAGS += -DUSE_MTL -DMTL_ENABLE_AVX
 CXXFLAGS += -I../../../MTL/include
 
